# LoserLetsMove

./: .env.example  .gitignore  README.md  docker-compose.yml  start.py  test_dataset.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes_calibration.py  routes_evaluate.py  routes_upload.py  ws_live.py
backend/app/db/: __init__.py  models.py  queries.py  supabase_client.py
backend/app/ml/: __init__.py
backend/app/services/: __init__.py  extraction.py  normalization.py
backend/app/utils/: __init__.py  schemas.py  video.py
backend/ml/: __init__.py  dataset.py  inference.py  model.py  train.py
backend/tests/: __init__.py  test_cpp_module.py  test_extraction.py  test_normalization.py
cpp/: CMakeLists.txt
cpp/include/: dtw.h  joint_angles.h
cpp/src/: bindings.cpp  dtw.cpp  joint_angles.cpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/examples/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/build-progress/: page.tsx
frontend/src/app/calibrate/: page.tsx
frontend/src/app/catalog/: page.tsx
frontend/src/app/catalog/[exercise]/: ExerciseClient.tsx  page.tsx
frontend/src/app/live/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: CalibrationWizard.tsx  ExerciseCard.tsx  LiveSession.tsx  Navbar.tsx  PoseOverlay.tsx  VideoUploader.tsx  WebcamCapture.tsx
frontend/src/hooks/: useMediaPipe.ts
frontend/src/lib/: api.ts  exercises.ts  types.ts  ws.ts
supabase/migrations/: 001_initial_schema.sql
